--- a/G06_Sergio_Miguel_Peña_Guerra_Ex1_3C.ipynb
+++ b/G06_Sergio_Miguel_Peña_Guerra_Ex1_3C.ipynb
@@ -998,8 +998,16 @@
       "source": [
         "# References.\n",
         "\n",
-        "- Raschka, S., & Mirjalili, V. (2019). *Python Machine Learning: Machine Learning and Deep Learning with Python, Scikit-learn, and TensorFlow 2, 3rd Edition.* Packt.  \n",
-        "- Pedregosa, F., Varoquaux, G., Gramfort, A., Michel, V., Thirion, B., Grisel, O., ... & Duchesnay, É. (2011). Scikit-learn: Machine learning in Python. *Journal of Machine Learning Research*, 12, 2825–2830.\n"
+        "- Boschetti, A., & Massaron, L. (2015). *Python Data Science Essentials*. Packt Publishing.  \n",
+        " <https://research-ebsco-com.bibliotecavirtual.unad.edu.co/linkprocessor/plink?id=25d30d07-05b8-342b-b4f4-1a804a7a5a5e>\n",
+        "\n",
+        "- Kane, F. (2017). *Hands-On Data Science and Python Machine Learning*. Packt Publishing.  \n",
+        " <https://research-ebsco-com.bibliotecavirtual.unad.edu.co/linkprocessor/plink?id=39b10fef-aff7-34ab-8e47-99cdae6433ba>\n",
+        "\n",
+        "- Raschka, S., & Mirjalili, V. (2017). *Python Machine Learning — Second Edition (Vol. 2nd ed.)*. Packt Publishing.  \n",
+        " <https://research-ebsco-com.bibliotecavirtual.unad.edu.co/linkprocessor/plink?id=1359b736-f1c3-3f90-88be-9e95a653da5c>\n",
+        "\n",
+        "- UNAD. (2025). *Activity Guide — Phase 2 — Getting Started with Ensemble Learning and Non-Generative Methods — Theory*. Virtual Campus.\n"
       ]
     },
     {
@@ -1531,6 +1539,26 @@
       ],
       "metadata": {
         "id": "5aDZp09zSiH0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# References.\n",
+        "\n",
+        "- Kane, F. (2017). *Hands-On Data Science and Python Machine Learning*. Packt Publishing.  \n",
+        " <https://research-ebsco-com.bibliotecavirtual.unad.edu.co/linkprocessor/plink?id=39b10fef-aff7-34ab-8e47-99cdae6433ba>\n",
+        "\n",
+        "- Kyriakides, G., & Margaritis, K. G. (2019). *Hands-On Ensemble Learning with Python: Build Highly Optimized Ensemble Machine Learning Models Using Scikit-learn and Keras*. Packt Publishing.  \n",
+        " <https://research-ebsco-com.bibliotecavirtual.unad.edu.co/linkprocessor/plink?id=c705ada6-a01c-3d11-a3f7-a794b0f99787>\n",
+        "\n",
+        "- Raschka, S., & Mirjalili, V. (2017). *Python Machine Learning — Second Edition (Vol. 2nd ed.)*. Packt Publishing.  \n",
+        " <https://research-ebsco-com.bibliotecavirtual.unad.edu.co/linkprocessor/plink?id=1359b736-f1c3-3f90-88be-9e95a653da5c>\n",
+        "\n",
+        "- UNAD. (2025). *Activity Guide — Phase 2 — Getting Started with Ensemble Learning and Non-Generative Methods — Theory*. Virtual Campus.\n"
+      ],
+      "metadata": {
+        "id": "xNs-dWNJbLJw"
       }
     }
   ],
