--- a/G06_Sergio_Miguel_Peña_Guerra_Ex1_3C.ipynb
+++ b/G06_Sergio_Miguel_Peña_Guerra_Ex1_3C.ipynb
@@ -133,7 +133,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d1QC8Gw8YIk3",
-        "outputId": "22218560-fd67-4857-c6ca-462453e6e4dd"
+        "outputId": "4dc4e668-3e78-4153-ce57-4089b63af48f"
       },
       "execution_count": 1,
       "outputs": [
@@ -310,7 +310,7 @@
         "\n",
         "# Opcional: Ajustes estéticos para matplotlib\n",
         "sns.set_theme(style=\"darkgrid\")  # Set Seaborn style\n",
-        "# plt.style.use('seaborn-darkgrid')  # Now this should work"
+        "# plt.style.use('seaborn-darkgrid')"
       ],
       "cell_type": "code",
       "metadata": {
@@ -318,7 +318,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CYxT6cshJbUb",
-        "outputId": "5db31b68-8a3b-4c10-845c-bdb96fd35c9a"
+        "outputId": "32b11d9a-f565-4239-e438-8f67a95be8eb"
       },
       "execution_count": 2,
       "outputs": [
@@ -391,7 +391,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "e5c9aded-bb66-43e2-c347-5bbcf1cb2a4d"
+        "outputId": "81cae5bb-fe9a-4700-9ab0-5ce73771d660"
       },
       "outputs": [
         {
@@ -482,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KdhHrP5arCrs",
-        "outputId": "d7fa1c28-b5aa-48b9-c47c-2efc3bfee11d"
+        "outputId": "69028ed5-a9f7-4a11-984d-f9a2fa1a0bf6"
       },
       "outputs": [
         {
@@ -933,7 +933,7 @@
           "height": 573
         },
         "id": "B1YbTpGurCrs",
-        "outputId": "c93fa294-4979-4a8e-e4d9-2de140ef43d9"
+        "outputId": "4b232264-1cf0-4545-9d07-e936add0e748"
       },
       "outputs": [
         {
@@ -1131,7 +1131,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RXt2JEZ0bIBd",
-        "outputId": "cecc1a94-3e38-4279-a1bf-c760e58fd95b"
+        "outputId": "73f61cfa-35bf-43a2-93ea-5ee2daaea373"
       },
       "execution_count": 12,
       "outputs": [
@@ -1254,7 +1254,7 @@
           "height": 1000
         },
         "id": "Y2uVIRGybtxp",
-        "outputId": "e1f426a1-a845-4046-a555-83c9e55d8fff"
+        "outputId": "ef91a53c-e481-4532-c4fb-4ef82cf756ec"
       },
       "execution_count": 13,
       "outputs": [
@@ -1414,7 +1414,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXKvZCKycb-_",
-        "outputId": "edc993b5-5fbb-4dc2-9acb-9419015db4a8"
+        "outputId": "66a23312-dd20-4914-b5bc-6b2355107071"
       },
       "execution_count": 14,
       "outputs": [
@@ -1492,7 +1492,7 @@
           "height": 496
         },
         "id": "lkxSLh6yc2w1",
-        "outputId": "3c302083-351e-4c7f-dc39-b5569ed93f58"
+        "outputId": "49fe416a-ed55-45c8-a768-e24fa26f5559"
       },
       "execution_count": 15,
       "outputs": [
@@ -1565,6 +1565,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
+      "history_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
